change - + combo idles

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -39,8 +39,8 @@ ZMK_COMBO(paste, &kp LC(V),  LB2 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDL
 ZMK_COMBO(undo,  &kp LC(Z),    LB4 LB3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - right hand */
-ZMK_COMBO(topminus, &kp MINUS,    RT1 RT2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(plus,     &kp PLUS,     RT2 RT3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(topminus, &kp MINUS,    RT1 RT2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(plus,     &kp PLUS,     RT2 RT3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* ZMK_COMBO(bspc,  &kp BSPC,     RT1 RT2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
 /* ZMK_COMBO(del,   &kp DEL,      RT2 RT3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
 
