disable shift+dot new sentence macros, add sys layer

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -34,6 +34,7 @@ ZMK_COMBO(selall,&hml LS(LALT)  LC(A),  LM4 LM3,     ALL_LAYERS, COMBO_TERM_FAST
 ZMK_COMBO(cut,   &kp LC(X),    LB3 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(copy,  &kp LC(C),  LB3 LB2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(paste, &kp LC(V),  LB2 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(p,     &kp P,  LB1 LB0,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* ZMK_COMBO(copy,  &kp LC(INS),  LB3 LB2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
 /* ZMK_COMBO(paste, &kp LS(INS),  LB2 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
 ZMK_COMBO(undo,  &kp LC(Z),    LB4 LB3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
