disable magic sentence and snakeword

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -85,7 +85,8 @@ ZMK_COMBO(tilde, &kp TILDE,    LM1 LB1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_I
 
 /* Vertical combos - right hand */
 ZMK_COMBO(caret, &kp CARET,    RT0 RM0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(under_snakeword,  &under_snakeword, RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(under, &kp UNDER,    RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+/* ZMK_COMBO(under_snakeword,  &under_snakeword, RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
 /* ZMK_COMBO(plus,  &kp PLUS,     RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
 ZMK_COMBO(star,  &kp STAR,     RT2 RM2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(amps,  &kp AMPS,     RT3 RM3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
