--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -12,95 +12,72 @@
 
 #define COMBO_TERM_FAST 18
 #define COMBO_TERM_SLOW 30
-
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
 
+#define T_FAST COMBO_TERM_FAST
+#define T_SLOW COMBO_TERM_SLOW
+#define I_FAST COMBO_IDLE_FAST
+#define I_SLOW COMBO_IDLE_SLOW
 
+#define ZMK_COMBO_MIRRORED(NAME, BEHAVIOR, POS_A, POS_B, TERM, IDLE) \
+    ZMK_COMBO(NAME,     BEHAVIOR, POS_A, NOT_MIRROR, TERM, IDLE) \
+    ZMK_COMBO(NAME##_m, BEHAVIOR, POS_B, MIRROR,        TERM, IDLE)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(esc,   &kp ESC,      LT3 LT2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mouse, &smart_mouse, LT2 LT1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ldel,  &kp DEL,      LT3 LT4,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO_MIRRORED(ldel,     &kp DEL,               LT4 LT3,         RT4 RT3,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(esc,      &kp ESC,               LT3 LT2,         RT3 RT2,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(mouse,    &smart_mouse,          LT2 LT1,         RT2 RT1,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(redo,     &kp LC(Y),             LT1 LT0,         RT1 RT0,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lwcsa,    &kp LC(LS(LA(LGUI))),  LM4 LM3 LM2 LM1, RM4 RM3 RM2 RM1,   T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lcsa,     &kp LC(LS(LALT)),      LM4 LM3 LM2,     RM4 RM3 RM2,       T_FAST, I_FAST)
 
-// Combos overlapping HRMs are set up as hold-taps themselves to allow for instantaneous
-// chording of mods. Custom hold-tap instances can be bootstrapped on the go using the
-// 8-argument version of ZMK_COMBO defined in base.keymap.
-/* ZMK_COMBO(ldr,   &leader,      LM2 LM1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST, LC(LGUI),     KEYS_R) */
-ZMK_COMBO(lwcsa, &kp  LC(LS(LA(LGUI))), LM4 LM3 LM2 LM1, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lcsa,  &kp  LC(LS(LALT)),     LM4 LM3 LM2, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ldrsh, &leader_sft,           LM3 LM2 LM1, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LC(LGUI)), KEYS_R)
-ZMK_COMBO(tab,   &hml LS(LCTRL) TAB,    LM3 LM2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ret,   &hml LC(LGUI)  RET,    LM2 LM1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(selall,&hml LS(LALT)  LC(A),  LM4 LM3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ldrsh,             &leader_sft,           LM3 LM2 LM1,     NOT_MIRROR,     T_FAST, I_FAST, LS(LC(LGUI)), KEYS_R)
 
-ZMK_COMBO(cut,   &kp LC(X),    LB3 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,  &kp LC(C),  LB3 LB2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste, &kp LC(V),  LB2 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(p,     &kp P,  LB1 LB0,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* ZMK_COMBO(copy,  &kp LC(INS),  LB3 LB2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(paste, &kp LS(INS),  LB2 LB1,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-ZMK_COMBO(undo,  &kp LC(Z),    LB4 LB3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO_MIRRORED(tab,      &hml LS(LCTRL) TAB,    LM3 LM2,         RM3 RM2,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(ret,      &hml LC(LGUI) RET,     LM2 LM1,         RM2 RM1,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(selall,   &hml LS(LALT) LC(A),   LM4 LM3,         RM4 RM3,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(cut,      &kp LC(X),             LB3 LB1,         RB3 RB1,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(copy,     &kp LC(C),             LB3 LB2,         RB3 RB2,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(paste,    &kp LC(V),             LB2 LB1,         RB2 RB1,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(p,        &kp P,                 LB1 LB0,         RB1 RB0,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(undo,     &kp LC(Z),             LB4 LB3,         RB4 RB3,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lc_ls_z,  &kp LC(LS(Z)),         LB4 LB3 LB2,     RB4 RB3 RB2,       T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lc_ls_c,  &kp LC(LS(C)),         LB3 LB2 LB1,     RB3 RB2 RB1,       T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lc_ls_v,  &kp LC(LS(V)),         LB2 LB1 LB0,     RB2 RB1 RB0,       T_FAST, I_FAST)
 
 /* Horizontal combos - right hand */
-ZMK_COMBO(topminus, &kp MINUS,    RT1 RT2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(plus,     &kp PLUS,     RT2 RT3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* ZMK_COMBO(bspc,  &kp BSPC,     RT1 RT2,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(del,   &kp DEL,      RT2 RT3,     ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST) */
+ZMK_COMBO_MIRRORED(topminus, &kp MINUS,             RT1 RT2,         LT1 LT2,           T_FAST, I_SLOW)
+ZMK_COMBO_MIRRORED(plus,     &kp PLUS,              RT2 RT3,         LT2 LT3,           T_FAST, I_SLOW)
+ZMK_COMBO_MIRRORED(rwcsa,    &kp RC(RS(RA(RGUI))),  RM4 RM3 RM2 RM1, LM4 LM3 LM2 LM1,   T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(rcsa,     &kp RC(RS(RALT)),      RM4 RM3 RM2,     LM4 LM3 LM2,       T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(rret,     &hmr RS(RC(RGUI)) RET, RM3 RM2 RM1,     LM3 LM2 LM1,       T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(lpar,     &lpar_lt,              RB1 RB2,         LB2 LB3,           T_FAST, I_FAST)
+ZMK_COMBO_MIRRORED(rpar,     &rpar_gt,              RB2 RB3,         LB1 LB2,           T_FAST, I_FAST)
 
-ZMK_COMBO(rwcsa, &kp  RC(RS(RA(RGUI))), RM4 RM3 RM2 RM1, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rcsa,  &kp  RC(RS(RALT)),     RM4 RM3 RM2, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rret,  &hmr RS(RC(RGUI)) RET, RM3 RM2 RM1, ALL_LAYERS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* ZMK_COMBO(lpar,  &lpar_dllr,   RM1 RM2,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LGUI),     KEYS_L) */
-/* ZMK_COMBO(rpar,  &rpar_caret,  RM2 RM3,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(LCTRL),    KEYS_L) */
-/* ZMK_COMBO(lpar,  &lpar_caret, RM1 RM2,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LGUI),     KEYS_L) */
-/* ZMK_COMBO(rpar,  &rpar_dllr,  RM2 RM3,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(LCTRL),    KEYS_L) */
-/* ZMK_COMBO(lpar,  &lpar_lt,     RM1 RM2,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LGUI),     KEYS_L) */
-/* ZMK_COMBO(rpar,  &rpar_gt,     RM2 RM3,     NOT_NAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(LCTRL),    KEYS_L) */
-/* ZMK_COMBO(srcaret, &kp CARET,         RM1 RM2,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(srdllr,  &kp DLLR,          RM2 RM3,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(rdel,    &hmr RS(RALT) DEL, RM3 RM4,     ALL_LAYERS , COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-ZMK_COMBO(lbkt,  &hmr RC(RGUI)  LBKT,     RM1 RM2,     NOT_NAV_FN_MOUSE,     COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rbkt,  &hmr RS(RCTRL) RBKT,     RM2 RM3,     NOT_NAV_FN_MOUSE,     COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lbrc,  &hmr RC(RGUI)  LBRC,     RM1 RM2,     NAV,                  COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rbrc,  &hmr RS(RCTRL) RBRC,     RM2 RM3,     NAV,                  COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lbrc,  &mkp MCLK,               RM1 RM2,     FN MOUSE_BTNS,        COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* ZMK_COMBO(lt,    &kp LT,       RM1 RM2,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(gt,    &kp GT,       RM2 RM3,         NAV    , COMBO_TERM_FAST, COMBO_IDLE_FAST) */
+ZMK_COMBO(lbkt,              &hmr RC(RGUI) LBKT,    RM1 RM2,         NOT_MIRR_FN_MBTNS, T_FAST, I_FAST)
+ZMK_COMBO(lbkt_m,            &hmr RC(RGUI) LBKT,    LM2 LM3,         MIRROR,            T_FAST, I_FAST)
+ZMK_COMBO(rbkt,              &hmr RS(RCTRL) RBKT,   RM2 RM3,         NOT_MIRR_FN_MBTNS, T_FAST, I_FAST)
+ZMK_COMBO(rbkt_m,            &hmr RS(RCTRL) RBKT,   LM1 LM2,         MIRROR,            T_FAST, I_FAST)
 
-/* ZMK_COMBO(lbkt,  &kp LBKT,     RB1 RB2,     NOT_NAV,     COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(rbkt,  &kp RBKT,     RB2 RB3,     NOT_NAV,     COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(lbrc,  &kp LBRC,     RB1 RB2,     NAV,         COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-/* ZMK_COMBO(rbrc,  &kp RBRC,     RB2 RB3,     NAV,         COMBO_TERM_FAST, COMBO_IDLE_FAST) */
-ZMK_COMBO(lpar,  &lpar_lt,     RB1 RB2,     ALL_LAYERS,  COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rpar,  &rpar_gt,     RB2 RB3,     ALL_LAYERS,  COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lbrc,              &mkp MCLK,             RM1 RM2,         FN MOUSE_BTNS,     T_FAST, I_FAST)
+
 
 /* Vertical combos - left hand */
-ZMK_COMBO(at,    &kp AT,       LT3 LM3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(hash,  &kp HASH,     LT2 LM2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dllr,  &kp DLLR,     LT1 LM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(prcnt, &kp PRCNT,    LT0 LM0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
-ZMK_COMBO(grave, &kp GRAVE,    LM3 LB3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(bslh,  &kp BSLH,     LM2 LB2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(tilde, &kp TILDE,    LM1 LB1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-/* ZMK_COMBO(equal, &kp EQUAL,    LM1 LB1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-/* ZMK_COMBO(tilde, &kp TILDE,    LM0 LB0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
+ZMK_COMBO_MIRRORED(at,       &kp AT,                LT3 LM3,         RT3 RM3,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(hash,     &kp HASH,              LT2 LM2,         RT2 RM2,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(dllr,     &kp DLLR,              LT1 LM1,         RT1 RM1,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(prcnt,    &kp PRCNT,             LT0 LM0,         RT0 RM0,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(grave,    &kp GRAVE,             LM3 LB3,         RM3 RB3,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(bslh,     &kp BSLH,              LM2 LB2,         RM2 RB2,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(tilde,    &kp TILDE,             LM1 LB1,         RM1 RB1,           T_SLOW, I_SLOW)
 
 /* Vertical combos - right hand */
-ZMK_COMBO(caret, &kp CARET,    RT0 RM0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(under, &kp UNDER,    RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-/* ZMK_COMBO(under_snakeword,  &under_snakeword, RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-/* ZMK_COMBO(plus,  &kp PLUS,     RT1 RM1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-ZMK_COMBO(star,  &kp STAR,     RT2 RM2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(amps,  &kp AMPS,     RT3 RM3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
-/* ZMK_COMBO(rtilde, &kp TILDE,    RM0 RB0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-ZMK_COMBO(minus, &kp MINUS,    RM0 RB0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(requal,&kp EQUAL,    RM1 RB1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-/* ZMK_COMBO(under, &kp UNDER,    RM0 RB0,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-/* ZMK_COMBO(minus, &kp MINUS,    RM1 RB1,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-ZMK_COMBO(excl,  &kp EXCL,     RM2 RB2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-/* ZMK_COMBO(fslh,  &kp FSLH,     RM2 RB2,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) */
-ZMK_COMBO(pipe,  &kp PIPE,     RM3 RB3,     ALL_LAYERS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
+ZMK_COMBO_MIRRORED(caret,    &kp CARET,             RT0 RM0,         LT0 LM0,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(under,    &kp UNDER,             RT1 RM1,         LT1 LM1,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(star,     &kp STAR,              RT2 RM2,         LT2 LM2,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(amps,     &kp AMPS,              RT3 RM3,         LT3 LM3,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(minus,    &kp MINUS,             RM0 RB0,         LM0 LB0,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(requal,   &kp EQUAL,             RM1 RB1,         LM1 LB1,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(excl,     &kp EXCL,              RM2 RB2,         LM2 LB2,           T_SLOW, I_SLOW)
+ZMK_COMBO_MIRRORED(pipe,     &kp PIPE,              RM3 RB3,         LM3 LB3,           T_SLOW, I_SLOW)
