--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,7 +4,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Enable mouse
 CONFIG_ZMK_POINTING=y
-# CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 
 # Combo config, automated by build script
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=14
@@ -25,3 +25,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 CONFIG_ZMK_STUDIO=n
 CONFIG_ZMK_STUDIO_LOCKING=n
+
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=15
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
