--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -67,13 +67,14 @@ ZMK_COMBO(lbrc,              &mkp MCLK,             RM1 RM2,         FN MOUSE_BT
 
 
 /* Vertical combos - left hand */
-ZMK_COMBO_MIRRORED(at,       &kp AT,                LT3 LM3,         RT3 RM3,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(hash,     &kp HASH,              LT2 LM2,         RT2 RM2,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(dllr,     &kp DLLR,              LT1 LM1,         RT1 RM1,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(prcnt,    &kp PRCNT,             LT0 LM0,         RT0 RM0,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(grave,    &kp GRAVE,             LM3 LB3,         RM3 RB3,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(bslh,     &kp BSLH,              LM2 LB2,         RM2 RB2,           T_LAX, I_NOPAUSE)
-ZMK_COMBO_MIRRORED(tilde,    &kp TILDE,             LM1 LB1,         RM1 RB1,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(at,          &kp AT,                LT3 LM3,         RT3 RM3,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(hash,        &kp HASH,              LT2 LM2,         RT2 RM2,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(dllr,        &kp DLLR,              LT1 LM1,         RT1 RM1,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(prcnt,       &kp PRCNT,             LT0 LM0,         RT0 RM0,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(grave,       &kp GRAVE,             LM3 LB3,         RM3 RB3,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(bslh,        &kp BSLH,              LM2 LB2,         RM2 RB2,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(tilde,       &kp TILDE,             LM1 LB1,         RM1 RB1,           T_LAX, I_NOPAUSE)
+ZMK_COMBO_MIRRORED(nudge_mouse, &nudge_mouse_down,     LM0 LB0,         RM0 RB0,           T_LAX, I_NOPAUSE)
 
 /* Vertical combos - right hand */
 ZMK_COMBO_MIRRORED(caret,    &kp CARET,             RT0 RM0,         LT0 LM0,           T_LAX, I_NOPAUSE)
