--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,8 @@
-# Set sleep timeout to 30min (30*60*1000ms)
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# 30min (30*60*1000ms)       1_800_000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# 60m                        3_600_000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # Enable mouse
 CONFIG_ZMK_POINTING=y
@@ -26,5 +28,5 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_STUDIO=n
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=20
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
