--- a/config/corne.conf
+++ b/config/corne.conf
@@ -28,5 +28,5 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_STUDIO=n
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=20
+# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=25
